# hw_27

./: .gitigrone  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
ads/: admin.py  models.py  urls.py  views.py
ads/fixtures/: ads.json
ads/migrations/: 0001_initial.py  0002_alter_ads_is_published_alter_ads_name.py  0003_ad_category_location_delete_ads_delete_categories.py  0004_ad_author_id_ad_category_id.py  0005_rename_author_id_ad_author_and_more.py  0006_alter_ad_is_published.py  0007_alter_category_name.py  0008_selected.py
ads/models/: ad.py  category.py  location.py  selected.py
ads/permissions/: ad.py  selected.py
ads/serializers/: ad.py  location.py  selected.py
ads/views/: ad.py  cat.py  location.py  selected.py
data/: utils.py
homework_27/: asgi.py  settings.py  urls.py  wsgi.py
pg_data/: postmaster.pid
pg_data/base/1/: 2619  2696  2840  2841  pg_internal.init
pg_data/base/5/: 1247  1249  1249_fsm  1259  16387  16388  16392  16393  16395  16396  16399  16401  16403  16404  16407  16409  16415  16417  16423  16424  16427  16429  16431  16437  16443  16450  16452  16466  16481  16495  16501  16502  16515  16540  16541  16546  16547  16549  16550  16553  (+69 more)
pg_data/global/: 1260  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_location_id_user_location.py  0003_alter_user_options.py  0004_auto_20221229_0812.py  0005_alter_user_password.py
